--- a/slideshow.html
+++ b/slideshow.html
@@ -1,4 +1,9 @@
+<html>
+<head>
 <script src="https://www.publicalbum.org/js/pa-embed-player.min.js" async></script>
+</head>
+
+<body>
 <div class="pa-embed-player" style="width:100%; height:480px; display:none;"
   data-link="https://photos.app.goo.gl/ZnHF26Sbx37CUhn29"
   data-title="Southern Spring"
@@ -14,4 +19,5 @@
   <img data-src="https://lh3.googleusercontent.com/r6kgonocvNr0Ez5eLr1wBuuuK1Fo24LqiG7IOhzuD8emnqG_53PcabdP7CHIu89dGa88V60yaIG9MQS0JeaS5uCpsNXGrMUpNRfE3gJEflNvpPSDrvjH5mZsd2TZQodQtUUPAWDfEQ8=w1920-h1080" src="" alt="" />
   <img data-src="https://lh3.googleusercontent.com/xFfXxhbbz_t4l3ckfRE9-MQ0a5YpWsFzHzHNocwpOZx_ZLUXLapPFxIE9t8kNQMZKqZwUIJ6HCUbUyPmXpJN8XB8H80pK4ehSiUQd1bohXuruzn0zHk-7CBC5Orl8LcXkHHFZ9_B1Bk=w1920-h1080" src="" alt="" />
 </div>
-
+</body>
+</html>
