--- a/slideshow.html
+++ b/slideshow.html
@@ -1,5 +1,7 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+
 <script src="https://www.publicalbum.org/js/pa-embed-player.min.js" async></script>
 </head>
 
